[package]
name = "dragon_chess"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
wasm-bindgen = "0.2.64"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.41"
wasm-bindgen-test = "0.3.13"
yew = "0.17.2"
css-in-rust = {version = "0.5.0", features=["yew_integration"]}
wasm-logger = "0.2.0"
log = "0.4.11"
rayon = "1.3.1"

