[package]
name = "dragon_chess_lib"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
wasm-bindgen = "0.2.64"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.41"
wasm-bindgen-test = "0.3.13"
